gateway-api/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
    serving.knative.dev/creator: kubernetes-admin
  creationTimestamp: "2022-11-23T12:24:25Z"
  labels:
    app: helloworld-go-00001
    networking.internal.knative.dev/serverlessservice: helloworld-go-00001
    networking.internal.knative.dev/serviceType: Public
    serving.knative.dev/configuration: helloworld-go
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: 696be2d8-d1c8-4ca0-91eb-e049608d6662
    serving.knative.dev/revision: helloworld-go-00001
    serving.knative.dev/revisionUID: e5bc03c9-8992-481e-bd0c-effa7a8edfe9
    serving.knative.dev/service: helloworld-go
    serving.knative.dev/serviceUID: eafca205-36a7-454e-ac97-4e0a4fd783d8
  name: helloworld-go-00001
  namespace: test
  ownerReferences:
    - apiVersion: networking.internal.knative.dev/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: ServerlessService
      name: helloworld-go-00001
      uid: 0bde307e-c503-4389-ab63-e28bea40d6a9
  resourceVersion: "4818"
  uid: dfa8ea39-137b-4e66-b123-5c2a7e3266bc
subsets:
  - addresses:
      - ip: 10.244.0.5
        nodeName: knative-gw-api-control-plane
        targetRef:
          kind: Pod
          name: activator-7c9c776fc9-tx7bz
          namespace: knative-serving
          uid: 949a998a-6d04-4575-9f30-21070a4ebdb2
    ports:
      - name: http
        port: 8012
        protocol: TCP
      - name: https
        port: 8112
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    endpoints.kubernetes.io/last-change-trigger-time: "2022-11-23T12:24:26Z"
  creationTimestamp: "2022-11-23T12:24:25Z"
  labels:
    app: helloworld-go-00001
    networking.internal.knative.dev/serverlessservice: helloworld-go-00001
    networking.internal.knative.dev/serviceType: Private
    serving.knative.dev/configuration: helloworld-go
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: 696be2d8-d1c8-4ca0-91eb-e049608d6662
    serving.knative.dev/revision: helloworld-go-00001
    serving.knative.dev/revisionUID: e5bc03c9-8992-481e-bd0c-effa7a8edfe9
    serving.knative.dev/service: helloworld-go
    serving.knative.dev/serviceUID: eafca205-36a7-454e-ac97-4e0a4fd783d8
  name: helloworld-go-00001-private
  namespace: test
  resourceVersion: "4847"
  uid: 660a4f85-af0f-4c2d-95d1-b261e59491fc
subsets:
  - addresses:
      - ip: 10.244.0.25
        nodeName: knative-gw-api-control-plane
        targetRef:
          kind: Pod
          name: helloworld-go-00001-deployment-576cb988bf-9kfhq
          namespace: test
          uid: 88a28563-b037-4027-95ef-7a0f144732ae
    ports:
      - name: http-usermetric
        port: 9091
        protocol: TCP
      - name: http
        port: 8012
        protocol: TCP
      - name: http-queueadm
        port: 8022
        protocol: TCP
      - name: http-istio
        port: 8012
        protocol: TCP
      - name: https
        port: 8112
        protocol: TCP
      - name: http-autometric
        port: 9090
        protocol: TCP
---
