gateway-api/endpointslice.yaml
---
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 10.244.0.5
    conditions:
      ready: true
    nodeName: knative-gw-api-control-plane
    targetRef:
      kind: Pod
      name: activator-7c9c776fc9-tx7bz
      namespace: knative-serving
      uid: 949a998a-6d04-4575-9f30-21070a4ebdb2
kind: EndpointSlice
metadata:
  annotations:
    autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
    serving.knative.dev/creator: kubernetes-admin
  creationTimestamp: "2022-11-23T12:24:25Z"
  generateName: helloworld-go-00001-
  generation: 1
  labels:
    app: helloworld-go-00001
    endpointslice.kubernetes.io/managed-by: endpointslicemirroring-controller.k8s.io
    kubernetes.io/service-name: helloworld-go-00001
    networking.internal.knative.dev/serverlessservice: helloworld-go-00001
    networking.internal.knative.dev/serviceType: Public
    serving.knative.dev/configuration: helloworld-go
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: 696be2d8-d1c8-4ca0-91eb-e049608d6662
    serving.knative.dev/revision: helloworld-go-00001
    serving.knative.dev/revisionUID: e5bc03c9-8992-481e-bd0c-effa7a8edfe9
    serving.knative.dev/service: helloworld-go
    serving.knative.dev/serviceUID: eafca205-36a7-454e-ac97-4e0a4fd783d8
  name: helloworld-go-00001-4tszb
  namespace: test
  ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Endpoints
      name: helloworld-go-00001
      uid: dfa8ea39-137b-4e66-b123-5c2a7e3266bc
  resourceVersion: "4821"
  uid: 015056a0-7758-4932-aaed-802d943f4d85
ports:
  - name: https
    port: 8112
    protocol: TCP
  - name: http
    port: 8012
    protocol: TCP
---
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 10.244.0.25
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: knative-gw-api-control-plane
    targetRef:
      kind: Pod
      name: helloworld-go-00001-deployment-576cb988bf-9kfhq
      namespace: test
      uid: 88a28563-b037-4027-95ef-7a0f144732ae
kind: EndpointSlice
metadata:
  annotations:
    endpoints.kubernetes.io/last-change-trigger-time: "2022-11-23T12:24:26Z"
  creationTimestamp: "2022-11-23T12:24:25Z"
  generateName: helloworld-go-00001-private-
  generation: 3
  labels:
    app: helloworld-go-00001
    endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
    kubernetes.io/service-name: helloworld-go-00001-private
    networking.internal.knative.dev/serverlessservice: helloworld-go-00001
    networking.internal.knative.dev/serviceType: Private
    serving.knative.dev/configuration: helloworld-go
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: 696be2d8-d1c8-4ca0-91eb-e049608d6662
    serving.knative.dev/revision: helloworld-go-00001
    serving.knative.dev/revisionUID: e5bc03c9-8992-481e-bd0c-effa7a8edfe9
    serving.knative.dev/service: helloworld-go
    serving.knative.dev/serviceUID: eafca205-36a7-454e-ac97-4e0a4fd783d8
  name: helloworld-go-00001-private-c2kwl
  namespace: test
  ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: helloworld-go-00001-private
      uid: e76e0dcb-08de-4270-9adc-37a274daa12b
  resourceVersion: "4849"
  uid: f1e3859d-330d-4c16-9f30-9b090d9f08f4
ports:
  - name: http-istio
    port: 8012
    protocol: TCP
  - name: http-queueadm
    port: 8022
    protocol: TCP
  - name: https
    port: 8112
    protocol: TCP
  - name: http-autometric
    port: 9090
    protocol: TCP
  - name: http-usermetric
    port: 9091
    protocol: TCP
  - name: http
    port: 8012
    protocol: TCP
