gateway-api/kservices.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"serving.knative.dev/v1","kind":"Service","metadata":{"annotations":{},"name":"helloworld-go","namespace":"test"},"spec":{"template":{"spec":{"containers":[{"env":[{"name":"TARGET","value":"Go Sample v1"}],"image":"gcr.io/knative-samples/helloworld-go"}]}}}}
    serving.knative.dev/creator: kubernetes-admin
    serving.knative.dev/lastModifier: kubernetes-admin
  creationTimestamp: "2022-11-23T12:24:24Z"
  generation: 1
  name: helloworld-go
  namespace: test
  resourceVersion: "4890"
  uid: eafca205-36a7-454e-ac97-4e0a4fd783d8
spec:
  template:
    metadata:
      creationTimestamp: null
    spec:
      containerConcurrency: 0
      containers:
        - env:
            - name: TARGET
              value: Go Sample v1
          image: gcr.io/knative-samples/helloworld-go
          name: user-container
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources: {}
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
    - latestRevision: true
      percent: 100
status:
  address:
    url: http://helloworld-go.test.svc.cluster.local
  conditions:
    - lastTransitionTime: "2022-11-23T12:24:26Z"
      status: "True"
      type: ConfigurationsReady
    - lastTransitionTime: "2022-11-23T12:24:27Z"
      status: "True"
      type: Ready
    - lastTransitionTime: "2022-11-23T12:24:27Z"
      status: "True"
      type: RoutesReady
  latestCreatedRevisionName: helloworld-go-00001
  latestReadyRevisionName: helloworld-go-00001
  observedGeneration: 1
  traffic:
    - latestRevision: true
      percent: 100
      revisionName: helloworld-go-00001
  url: http://helloworld-go.test.127.0.0.1.sslip.io
---
