gateway-api/services.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    serving.knative.dev/creator: kubernetes-admin
    serving.knative.dev/lastModifier: kubernetes-admin
  creationTimestamp: "2022-11-23T12:24:26Z"
  labels:
    serving.knative.dev/route: helloworld-go
    serving.knative.dev/service: helloworld-go
  name: helloworld-go
  namespace: test
  ownerReferences:
    - apiVersion: serving.knative.dev/v1
      blockOwnerDeletion: true
      controller: true
      kind: Route
      name: helloworld-go
      uid: 9770cca4-9b31-478c-8690-7cc6b74cf922
  resourceVersion: "4888"
  uid: 03ffab6e-9ab1-4d72-9520-c311717b519a
spec:
  externalName: envoy.contour-internal.svc.cluster.local
  ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
    serving.knative.dev/creator: kubernetes-admin
  creationTimestamp: "2022-11-23T12:24:25Z"
  labels:
    app: helloworld-go-00001
    networking.internal.knative.dev/serverlessservice: helloworld-go-00001
    networking.internal.knative.dev/serviceType: Public
    serving.knative.dev/configuration: helloworld-go
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: 696be2d8-d1c8-4ca0-91eb-e049608d6662
    serving.knative.dev/revision: helloworld-go-00001
    serving.knative.dev/revisionUID: e5bc03c9-8992-481e-bd0c-effa7a8edfe9
    serving.knative.dev/service: helloworld-go
    serving.knative.dev/serviceUID: eafca205-36a7-454e-ac97-4e0a4fd783d8
  name: helloworld-go-00001
  namespace: test
  ownerReferences:
    - apiVersion: networking.internal.knative.dev/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: ServerlessService
      name: helloworld-go-00001
      uid: 0bde307e-c503-4389-ab63-e28bea40d6a9
  resourceVersion: "4817"
  uid: 20c0667b-5467-4a82-ba8e-c6ecf1bbc8df
spec:
  clusterIP: 10.96.39.159
  clusterIPs:
    - 10.96.39.159
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8012
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8112
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    autoscaling.knative.dev/class: kpa.autoscaling.knative.dev
    serving.knative.dev/creator: kubernetes-admin
  creationTimestamp: "2022-11-23T12:24:25Z"
  labels:
    app: helloworld-go-00001
    networking.internal.knative.dev/serverlessservice: helloworld-go-00001
    networking.internal.knative.dev/serviceType: Private
    serving.knative.dev/configuration: helloworld-go
    serving.knative.dev/configurationGeneration: "1"
    serving.knative.dev/configurationUID: 696be2d8-d1c8-4ca0-91eb-e049608d6662
    serving.knative.dev/revision: helloworld-go-00001
    serving.knative.dev/revisionUID: e5bc03c9-8992-481e-bd0c-effa7a8edfe9
    serving.knative.dev/service: helloworld-go
    serving.knative.dev/serviceUID: eafca205-36a7-454e-ac97-4e0a4fd783d8
  name: helloworld-go-00001-private
  namespace: test
  ownerReferences:
    - apiVersion: networking.internal.knative.dev/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: ServerlessService
      name: helloworld-go-00001
      uid: 0bde307e-c503-4389-ab63-e28bea40d6a9
  resourceVersion: "4810"
  uid: e76e0dcb-08de-4270-9adc-37a274daa12b
spec:
  clusterIP: 10.96.157.38
  clusterIPs:
    - 10.96.157.38
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8012
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8112
    - name: http-autometric
      port: 9090
      protocol: TCP
      targetPort: http-autometric
    - name: http-usermetric
      port: 9091
      protocol: TCP
      targetPort: http-usermetric
    - name: http-queueadm
      port: 8022
      protocol: TCP
      targetPort: 8022
    - name: http-istio
      port: 8012
      protocol: TCP
      targetPort: 8012
  selector:
    serving.knative.dev/revisionUID: e5bc03c9-8992-481e-bd0c-effa7a8edfe9
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
